# code-template

./: README.md  RENAMING-GUIDE.md  rename-templates.ps1  rename-templates.sh
py-starter-api/: cookiecutter.json
py-starter-api/{{ cookiecutter.project_slug }}/: .env.example
py-starter-cli/: cookiecutter.json
py-starter-cli/{{ cookiecutter.project_slug }}/: pyproject.toml
py-starter-enterprise/: cookiecutter.json
py-starter-enterprise/my-enterprise-project/: CONTRIBUTING.md  Dockerfile  Makefile  justfile  pyproject.toml
py-starter-enterprise/my-enterprise-project/.github/workflows/: ci.yml
py-starter-enterprise/my-enterprise-project/docs/source/: conf.py
py-starter-enterprise/my-enterprise-project/docs/source/_templates/: .gitkeep
py-starter-enterprise/my-enterprise-project/docs/source/api/: my_enterprise_project.rst
py-starter-enterprise/my-enterprise-project/src/my_enterprise_project/: __init__.py  __main__.py
py-starter-enterprise/my-enterprise-project/src/my_enterprise_project/api/: __init__.py
py-starter-enterprise/my-enterprise-project/src/my_enterprise_project/db/: __init__.py
py-starter-enterprise/my-enterprise-project/tests/: conftest.py
py-starter-enterprise/my-enterprise-project/tests/unit/core/: test_services.py
py-starter-enterprise/{{ cookiecutter.project_slug }}/: pyproject.toml
py-starter-enterprise/{{ cookiecutter.project_slug }}/.github/: PULL_REQUEST_TEMPLATE.md
py-starter-enterprise/{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.md
py-starter-enterprise/{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
py-starter-enterprise/{{ cookiecutter.project_slug }}/docs/source/: index.rst
py-starter-enterprise/{{ cookiecutter.project_slug }}/docs/source/api/: index.rst
py-starter-enterprise/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py
py-starter-enterprise/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/api/: __init__.py
py-starter-enterprise/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/core/: __init__.py  services.py
py-starter-enterprise/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/db/: models.py  session.py
py-starter-minimal/: cookiecutter.json
py-starter-minimal/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  {{ cookiecutter.package_name }}.py
py-starter-monorepo-ai/: README.md  使用指南.md  使用指南1.md
py-starter-monorepo-ai/{{ cookiecutter.project_slug }}/: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  Makefile  docker-compose.yml  justfile
py-starter-monorepo-ai/{{ cookiecutter.project_slug }}/services/audio-api/: pyproject.toml
py-starter-monorepo-ai/{{ cookiecutter.project_slug }}/services/audio-api/src/: main.py
py-starter-monorepo-ai/{{ cookiecutter.project_slug }}/services/ml-api/: pyproject.toml
wanderer99176-py-template-01-mvp/: cookiecutter.json  模版1结构.md
wanderer99176-py-template-01-mvp/{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml  {{ cookiecutter.package_name }}.py
wanderer99176-py-template-02-small/: 模版2结构.md
wanderer99176-py-template-02-small/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
wanderer99176-py-template-02-small/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: main.py
wanderer99176-py-template-02-small/{{ cookiecutter.project_slug }}/tests/: test_main.py
wanderer99176-py-template-03-medium/: cookiecutter.json  模版3结构.md
wanderer99176-py-template-03-medium/{{ cookiecutter.project_slug }}/: Dockerfile  README.md  pyproject.toml
wanderer99176-py-template-05/: cookiecutter.json  模版5结构.md
wanderer99176-py-template-05-enterprise/: 模版5结构.md
wanderer99176-py-template-06-project01/: README.md  cookiecutter.json  使用指南.md  模版5结构.md
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/: .prettierrc  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: feature_request.md
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/.github/workflows/: ci-cd.yml  dependabot.yml
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/docs/: deployment.md
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/docs/adr/: 001-monorepo-architecture.md  README.md
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/infra/docker-compose/: monitoring.yml
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/scripts/: codegen.sh
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/backend/: README.md  pyproject.toml
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/backend/src/{{ cookiecutter.package_name }}/: __init__.py
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/backend/src/{{ cookiecutter.package_name }}/api/v1/: router.py
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/backend/src/{{ cookiecutter.package_name }}/api/v1/endpoints/: health.py  users.py
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/backend/src/{{ cookiecutter.package_name }}/core/: config.py
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/backend/src/{{ cookiecutter.package_name }}/db/: session.py
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/frontend/: Dockerfile  app.vue  package.json
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/ml-api/src/: main.py
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/scraper/: README.md  scrapy.cfg
wanderer99176-py-template-06-project01/{{ cookiecutter.project_slug }}/services/scraper/{{ cookiecutter.scraper_name }}/: settings.py
(+108 files in other folders)
