# ==============================================================================
# Build system configuration
# ==============================================================================
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ==============================================================================
# Project metadata (PEP 621)
# ==============================================================================
[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}" },
]
requires-python = ">={{ cookiecutter.python_version }}"

# --- Production Dependencies (Example for a simple script) ---
dependencies = [
    "requests"
]

# ==============================================================================
# Tool Configurations
# ==============================================================================

# --- Setuptools configuration (for flat-layout) ---
# This tells setuptools that your code is a single Python module
# located in the root directory, not a package in a subdirectory.
[tool.setuptools]
py-modules = ["{{ cookiecutter.package_name }}"]