[project]
name = "{{ cookiecutter.project_slug }}-ml-api"
version = "{{ cookiecutter.version }}"
description = "目标检测 ML API - YOLOv8"
requires-python = ">={{ cookiecutter.python_version }}"

dependencies = [
    "fastapi[all]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "ultralytics>=8.1.0",  # YOLOv8
    "opencv-python>=4.9.0",
    "pillow>=10.2.0",
    "numpy>=1.26.0",
    "torch>=2.1.0",
    {% if cookiecutter.use_gpu == 'yes' -%}
    "torchvision>=0.16.0",
    {% endif -%}
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "ruff>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

